--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/LukaszBielsko/node_express_graphQL/issues"
   },
-  "homepage": "https://github.com/LukaszBielsko/node_express_graphQL#readme"
+  "homepage": "https://github.com/LukaszBielsko/node_express_graphQL#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.5.8",
+    "mongoose": "^5.7.14",
+    "nodemon": "^2.0.1"
+  }
 }
